# europriv-bench

./: .gitignore  CONTRIBUTING.md  GOVERNANCE.md  Makefile  README.md  pyproject.toml  ruff.toml
.github/: MODEL_CARD_TEMPLATE.yaml
.github/ISSUE_TEMPLATE/: leaderboard-submission.yml
.github/PULL_REQUEST_TEMPLATE/: submission.md
.github/workflows/: submission.yml
analysis/: ai4privacy_openpii_leaderboard.json  ai4privacy_openpii_saturation.json  ai4privacy_openpii_saturation.py  build_dissociation_summary.py  cz_dissociation.json  cz_dissociation.md  cz_realskeleton_rows.json  dissociation_summary.json  dissociation_summary.md  dk_dissociation.json  dk_dissociation.md  dk_realskeleton_rows.json  ee_dissociation.json  ee_dissociation.md  ee_realskeleton_rows.json  eu_breadth_dissociation.py  f1_desaturation_stageb_res95.json  f1_desaturation_stageb_res95.md  f1_desaturation_stageb_res95.py  family_dissociation.py  family_dissociation_ro_realskeleton.json  family_dissociation_ro_realskeleton.md  fi_dissociation.json  fi_dissociation.md  fi_realskeleton_rows.json  it_dissociation.json  it_dissociation.md  it_dissociation.py  it_realskeleton_rows.json  legal_dissociation.json  legal_dissociation.md  legal_dissociation.py  legal_realskeleton_rows.json  lt_dissociation.json  lt_dissociation.md  lt_realskeleton_rows.json  mcnemar_ro_realskeleton.json  mcnemar_ro_realskeleton.md  name_in_context_leak.py  name_in_context_leak_ro_realskeleton.json  (+36 more)
baselines/: leaderboard-full.json  leaderboard.json
docs/: crosswalk-ai4privacy.md  klu-118-qi-distinctiveness-design.md  legal-realskeleton-sources.md  prior-art.md  ro-sources.md  taxonomy.md
evaluations/: anonymization-ro-realskeleton.yaml  pii-detection-ai4privacy-openpii-cs.yaml  pii-detection-ai4privacy-openpii-de.yaml  pii-detection-ai4privacy-openpii-el.yaml  pii-detection-ai4privacy-openpii-fi.yaml  pii-detection-ai4privacy-openpii-fr.yaml  pii-detection-ai4privacy-openpii-hu.yaml  pii-detection-ai4privacy-openpii-nl.yaml  pii-detection-ai4privacy-openpii-pl.yaml  pii-detection-ai4privacy-openpii-ro.yaml  pii-detection-ai4privacy-openpii-sv.yaml  pii-detection-de.yaml  pii-detection-en.yaml  pii-detection-es.yaml  pii-detection-fr.yaml  pii-detection-it-realskeleton.yaml  pii-detection-it.yaml  pii-detection-legal-realskeleton.yaml  pii-detection-nl.yaml  pii-detection-pl-realskeleton.yaml  pii-detection-ro-realskeleton.yaml  pii-detection-ro-synthetic.yaml  pii-detection-tab-echr-legal-en.yaml  qi-distinctiveness-ro-realskeleton.yaml
evaluations/_planned/: pii-detection-ro-legal.yaml
src/europriv_bench/: __init__.py  adapters.py  belfiore.py  crosswalk.py  leaderboard.py  logger.py  main.py  metrics.py  national_id.py  parallel.py  qi_enrich.py  qi_schema.py  runner.py  spans.py  spec.py  submission.py  taxonomy.py
src/europriv_bench/conf/: taxonomy.yaml
src/europriv_bench/refpop/: __init__.py  build_joint.py  fallbacks.py  manifest.yaml  report.py  uniqueness.py
src/europriv_bench/refpop/crosswalks/: ro_county_nuts2.csv
src/europriv_bench/refpop/fixtures/: synthetic_census_xx.yaml
submissions/: README.md  explosion-spacy.yaml  fastino-gliner2.yaml  microsoft-presidio.yaml
tests/: test_analysis_dissociation_summary.py  test_analysis_eu_breadth_dissociation.py  test_analysis_family_dissociation.py  test_analysis_it_dissociation.py  test_analysis_legal_dissociation.py  test_analysis_mcnemar.py  test_analysis_synthetic_real_drift.py  test_analysis_synthetic_realism_gap.py  test_cli_resilient.py  test_gliner2_spacy_adapters.py  test_kp_adapter.py  test_phase1.py  test_presidio_adapter.py  test_qi_distinctiveness.py  test_qi_enrich.py  test_refpop_license_gate.py  test_refpop_purr.py  test_ro.py  test_smoke.py  test_submission.py  test_tab_reid_leakage.py  test_taxonomy_contract.py  test_track_c.py
