[project]
name = "europriv-bench"
version = "0.2.0"
description = "EuroPriv-Bench: a unified pan-European de-identification & anonymization benchmark with privacy-utility metrics"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1,<9",
    "rich>=13.0,<15",
    "rich-click>=1.8,<2",
    "pyyaml>=6.0,<7",
    "pydantic>=2.0,<3",
    "seqeval>=1.2,<2",
    "huggingface-hub>=0.25,<2",
]

[project.optional-dependencies]
# Heavy model backends are optional — the harness core stays light.
# transformers>=5.9 is required for the openai/privacy-filter (openai_privacy_filter) arch —
# 5.1 does NOT recognize it. NOTE: the `gliner` extra pins an older transformers and will
# downgrade/break this; run GLiNER baselines in a SEPARATE environment.
hf = ["transformers>=5.9", "torch>=2.4", "datasets>=4.0"]
gliner = ["gliner>=0.2"]
presidio = ["presidio-analyzer>=2.2"]
# Paper-figure / significance-test analysis (KLU-53). Kept out of core: the harness scores and
# writes JSON without it; only `analysis/pareto_dissociation.py` needs matplotlib to render the
# figure. scipy is used for the exact-binomial McNemar p-value when present (pure-Python fallback).
analysis = ["matplotlib>=3.8", "scipy>=1.11"]
dev = ["pytest>=8.0", "ruff>=0.11", "coverage>=7.0"]

[project.scripts]
europriv = "europriv_bench.main:cli"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# Bundle the canonical taxonomy YAML so it travels with the wheel/sdist (KLU-43). It lives
# inside the package (src/europriv_bench/conf/) and is loaded via importlib.resources, so this
# is what makes taxonomy loading work for non-editable `pip install europriv-bench`.
[tool.setuptools.package-data]
europriv_bench = ["conf/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["europriv_bench"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
omit = ["*/tests/*"]
